# ChangeLog for perl-core/Test-Simple
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.55 2009/03/13 21:53:20 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Test-Simple-0.62.ebuild,
  -Test-Simple-0.63.ebuild, -Test-Simple-0.64.ebuild,
  -Test-Simple-0.65.ebuild, -Test-Simple-0.66.ebuild,
  -Test-Simple-0.67.ebuild, -Test-Simple-0.84.ebuild:
  Cleanup

*Test-Simple-0.86 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org> +Test-Simple-0.86.ebuild:
  Version bump

*Test-Simple-0.84 (20 Oct 2008)

  20 Oct 2008; Torsten Veller <tove@gentoo.org> +Test-Simple-0.84.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> Test-Simple-0.80.ebuild:
  alpha/ia64/sparc/x86 stable

  06 Jun 2008; Alexis Ballier <aballier@gentoo.org> Test-Simple-0.80.ebuild:
  keyword ~sparc-fbsd

*Test-Simple-0.80 (09 May 2008)

  09 May 2008; Torsten Veller <tove@gentoo.org> +Test-Simple-0.80.ebuild:
  #219480 - Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Test-Simple-0.70.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> Test-Simple-0.70.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Test-Simple-0.70.ebuild:
  amd64 stable

  12 Aug 2007; Tom Gall <tgall@gentoo.org> Test-Simple-0.70.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Simple-0.70.ebuild:
  Stable on ppc.

  10 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  Test-Simple-0.70.ebuild:
  sparc stable

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> Test-Simple-0.70.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org> Test-Simple-0.67.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Simple-0.67.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Test-Simple-0.67.ebuild:
  Stable on sparc
