@@ -1,18 +1,10 @@
-DIST Test-Simple-0.64.tar.gz 70874 RMD160 dfe88655a046b4034a592ea8bc5039771f78f098 SHA1 f275d266712d9fe7672fd3a5e023f67886eb0ee9 SHA256 4d06bff53e2f3bdcd8535898469a7c816d6b4067a5f586255049223bf1bb9883
-DIST Test-Simple-0.65.tar.gz 76157 RMD160 8af18a6eb526de349cd3be9fc7323f42bc08ab37 SHA1 c5390e9ff90ba718fdfe8021ea57cf4e46dc222a SHA256 e7170184b4e50bc4c4e7f7f39681751e5c3953bdb37839213ca14fa2cbc2b682
-DIST Test-Simple-0.66.tar.gz 76231 RMD160 d5ed13a96adba3176b95cb106a9e6638a4239ff0 SHA1 d4db2900057f93613ee19e0c89542e68866f8f95 SHA256 a14feb704e2a4dba67852ec45d09cdf9f34aa4a06828b1a4a2902524d9d69ea5
-DIST Test-Simple-0.67.tar.gz 76284 RMD160 70c744fef4f6925b6d58287c1e3ba2209dc10193 SHA1 082e6362ac0f56e6eb0da7b72e362cb34b21c2b4 SHA256 c78989a18462066d06d5379ed93d17beb7acb352b540ed6e2807e1f4791457f9
 DIST Test-Simple-0.70.tar.gz 77621 RMD160 6ae8828ead11c13c1d6700040f346a1c0805330a SHA1 d94d57df3989f69d42f987ca83592f223660b43a SHA256 8968190e8970ae4e3baad4a6513b8bc3049fafe3d42fb40d15f95cb4ad3bda67
 DIST Test-Simple-0.80.tar.gz 81559 RMD160 6ad7940988427d93987ca5a5a2aba1fa0bdd4b74 SHA1 dde80be914943c217f0fd0e61ba1b455fe762077 SHA256 a0939d6321605b1374b3d7a09a1481a439b8197c3b235ba82e97121c40e43f97
-DIST Test-Simple-0.84.tar.gz 89308 RMD160 7173003825b3828d9b2a33bdc50ea8130c445265 SHA1 d8f3fe737b334a30c4a0819a6fe960e2e999dc8d SHA256 9464001cc068a10e51c63612eac0c796dc786a6902ea06cc74d2903bf021120c
 DIST Test-Simple-0.86.tar.gz 89489 RMD160 19a69e52d2d7cabd2df47aab976758bd4fd0846b SHA1 b3a66d297459cf9ca6d952af8f87ceb3ad6c54a8 SHA256 4c65024a2b5cf9eea44bafaab9735e08000088865a35c9d5f554f3921ff660b8
-EBUILD Test-Simple-0.64.ebuild 588 RMD160 ecf02214fa50021cfa5f67dd6e03bbfb3ed09c49 SHA1 04976ab39bc2a07e65d1593e8f16f0d72d003f06 SHA256 e9094b8fc2745dfa1407971ba63ad4c17740e9063fcadd3eace4b52d8e20a6ed
-EBUILD Test-Simple-0.65.ebuild 590 RMD160 98b0f5ca7a02278bb40bca9acf22d5208e50cc8d SHA1 0fec38248f7c54c0b43e5fb3e620717680ddbc69 SHA256 f8adb94bf44e099fe1360f43c5aac4ab01e9f5d879e39888cf815899e48e02f5
-EBUILD Test-Simple-0.66.ebuild 627 RMD160 3fb74a4913515cfc3b7ab4d4c360d204f38604b4 SHA1 c317d4ee99ec157a19fed26f78243e21ec80aa2c SHA256 e3476e320a01147b52f4b249117a33e9ace16f08c323f88397ffa1f06c157005
-EBUILD Test-Simple-0.67.ebuild 625 RMD160 aa7184a67b9f70e5ddf92bd287bf67aa9782b95c SHA1 86f3aab98c6d03a5c4c4d03ec6d2e3b22fbf331a SHA256 99c58d04585edc000e6d9bc0ef2d27beed7773b931c17a2e9b651c58093dc60e
+DIST Test-Simple-0.88.tar.gz 98436 RMD160 81f57ba3122605bb1ae4abc4c37a9033f0044fff SHA1 75941e8bf60e9b00eede30aac1677c0fc50a3bab SHA256 83e3d15d12e0dc072261e57bb11e120d5316306de1496f46d91312afbc76b420
 EBUILD Test-Simple-0.70.ebuild 636 RMD160 3b4d0ac1537afe3e058ac91ae52992704be40772 SHA1 adc4b7e1a46e5504b3e2f0345cea52151ac703e4 SHA256 90da7d04ce50b0b913a374b971caadeaf97c1e4c5f823236d044132ea53942a0
 EBUILD Test-Simple-0.80.ebuild 578 RMD160 a8337b47cd992a91e9d086bf1788cf259c9a23a2 SHA1 0f797efda0d094330c68b36090518611d9182e0a SHA256 7510486eec5e1eb022d5123f7f55fb3c3cfb028e87c602b7105ea0daa05ca088
-EBUILD Test-Simple-0.84.ebuild 519 RMD160 5708d47883c4fc46d0ba60ac9a7be16c6f6678ae SHA1 0c61dedbd7f9b7efbf564287ed7bcbbfee30a821 SHA256 2543f01351474c61b1f836c2d86e36d79d255cde8d510d2fab7ef2cc190f091f
 EBUILD Test-Simple-0.86.ebuild 536 RMD160 f30d2bfb832e491295c839cbecc18e820ee4838c SHA1 2a0e83467f929e47f27cf6e3af0c959ca1cbbfde SHA256 6f6632c3968d406b1b2a41331a68577c5b25792976081576aa70f4aa30b44c03
-MISC ChangeLog 10115 RMD160 b171977bde8b3dacdcc5ba3e976f728d4e948f3b SHA1 0793682573272cd2378c1ee860d25eb70b339179 SHA256 94b6fe98028dbca4d253f4346c8cf046a516dfeefd8350c492a5bf681d86f6dc
+EBUILD Test-Simple-0.88.ebuild 487 RMD160 47615057b6b8e591562d1b5f65d2b5a608b7c84b SHA1 fb7d6818411d02c530e44aa99c7ce6983ead0a48 SHA256 70d2de0dfffca3c0a060b69228911dc2350fe407ee7196b8513efbda644c90e7
+MISC ChangeLog 10238 RMD160 01455ffbd0f314d32a90081766b03af1edeaf33e SHA1 13a070b36847a69a95f23a1bbaba58d498f60760 SHA256 fb5e662a58cb2036cf97caedf0e144b810b50eb3cf3fc20ac9df45b26ddfc30b
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
