@@ -1,20 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/Test-Simple-0.66.ebuild,v 1.7 2007/04/15 21:08:40 corsair Exp $
-
-inherit perl-module
-
-DESCRIPTION="Basic utilities for writing tests"
-HOMEPAGE="http://search.cpan.org/~mschwern/${P}/"
-SRC_URI="mirror://cpan/authors/id/M/MS/MSCHWERN/${P}.tar.gz"
-
-LICENSE="Artistic"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE=""
-
-mydoc="rfc*.txt"
-myconf="INSTALLDIRS=vendor"
-DEPEND=">=dev-lang/perl-5.8.0-r12"
-
-SRC_TEST="do"
