@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Test-Simple
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.55 2009/03/13 21:53:20 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.56 2009/05/31 07:34:01 tove Exp $
+
+*Test-Simple-0.88 (31 May 2009)
+
+  31 May 2009; Torsten Veller <tove@gentoo.org> +Test-Simple-0.88.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Test-Simple-0.62.ebuild,
   -Test-Simple-0.63.ebuild, -Test-Simple-0.64.ebuild,
